# polkadot-etl

./: .gitignore  README.md  env  pyproject.toml  result.csv  schema.json
polkadotetl/: __init__.py  constants.py  exceptions.py  warnings.py
polkadotetl/cli/: __init__.py  export_blocks.py
polkadotetl/cli/datasources/: __init__.py  bigquery.py
polkadotetl/cli/merkle/: __init__.py  bigquery.py
polkadotetl/core/: types.py
polkadotetl/enrich/: __init__.py
polkadotetl/export/: __init__.py  internals.py  sidecar.py  tasks.py
tests/: test_enrich.py  test_sidecar.py
tests/sample_blocks/: 1371797.json
