[tool.poetry]
name = "polkadotetl"
version = "0.1.0"
description = "Polkadot ETL CLI in the spirit of the blockchain ETL project."
authors = ["Vinay Keerthi <11478411+stonecharioteer@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
requests = "^2.28.1"
tenacity = "^8.1.0"
typer = "^0.6.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
polkadotetl = "polkadotetl:cli"
